# model_analyzer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MemoryAnalyzer.sln  Pipfile  README.md  VERSION  add_sub-results.csv  build_wheel.sh  format.py  input-data-10.json  input-data-100.json  input-data-50.json  model-analyzer.sln  nginx.conf  nvidia_entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  pre-commit.yml  python-package.yaml  trigger_ci.yml
docs/: README.md  bls_quick_start.md  checkpoints.md  cli.md  config.md  config_search.md  ensemble_quick_start.md  install.md  k8s_deploy.md  kubernetes_deploy.md  launch_modes.md  metrics.md  mm_quick_start.md  model_types.md  quick_start.md  report.md
docs/cli/: overview.md
docs/docker/: overview.md
docs/helm/: overview.md
examples/: bls_input_data.json
experiments/: checkpoint_data.py  checkpoint_experiment_data.py  config_command_experiment.py  evaluate_config_generator.py  experiment_config_command_creator.py  experiment_data.py  experiment_evaluator.py  experiment_file_writer.py  experiment_plot.py  generator_experiment_factory.py  main.py  profile_config.py  profile_data.py  result_evaluator.py  start_profiles.sh
experiments/optuna/: optuna_exp.py
experiments/scripts/: minimize_latency.yml  sweep_checkpoints.py  test_pa.py
helm-chart/: .helmignore  Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  config-map.yaml  job.yaml
model_analyzer/: __init__.py  analyzer.py  analyzer_statistics.py  constants.py  entrypoint.py  log_formatter.py  model_analyzer_exceptions.py  model_manager.py
model_analyzer/analyzer/: perf_analyzer.py
model_analyzer/cli/: cli.py  entrypoint.py  model.py
model_analyzer/config/: config.py  config_enum.py  config_field.py  config_list_generic.py  config_list_numeric.py  config_list_string.py  config_model.py  config_object.py  config_primitive.py  config_protobuf_utils.py  config_status.py  config_sweep.py  config_union.py  config_value.py  full_run_config_generator.py  run_config.py  run_config_generator.py
model_analyzer/device/: device.py  gpu_device.py  gpu_device_factory.py  model.py
model_analyzer/entrypoints/: main.py
model_analyzer/monitor/: __init__.py  cpu_monitor.py  gpu_free_memory.py  gpu_monitor.py  gpu_used_memory.py  model.py  monitor.py  nvml.py  remote_monitor.py
model_analyzer/output/: file_writer.py  output_table.py  output_writer.py  table_writer.py
model_analyzer/perf_analyzer/: genai_perf_config.py  perf_analyzer.py  perf_config.py
model_analyzer/plots/: detailed_plot.py  plot.py  plot_manager.py  simple_plot.py
model_analyzer/record/: cpu_available_ram.py  cpu_used_ram.py  gpu_free_memory.py  gpu_memory_record.py  gpu_record.py  gpu_used_memory.py  (+10 more)
profile_configs/: inception_v1_graphdef.yaml  resnet50_libtorch.yaml  vgg19_libtorch.yaml
results/: metrics-server-only.csv
src/: GpuMetricSample.cs  MetricsCollector.cs  ModelAnalyzer.cs  Program.cs  Triton.MemoryAnalyzer.csproj  model-analyzer.csproj
tests/: FunctionalTests.cs  Triton.MemoryAnalyzer.Tests.csproj  mock_api_error.py  mock_base.py  mock_client.py  mock_dcgm.py  mock_dcgm_agent.py  mock_dcgm_field_group_watcher.py  mock_numba.py  mock_nvml.py  mock_perf_analyzer.py  mock_server.py  mock_server_docker.py  mock_server_local.py  model-analyzer.UnitTests.csproj  test_analyzer.py  test_bls_report_manager.py  test_cli.py  test_cli_options.py  test_concurrency_search.py  test_config.py  test_config_composing_model_validation.py  test_config_parameters.py  test_constraint_manager.py  test_coordinate.py  test_coordinate_data.py  test_cpu_monitor.py  test_dcgm_monitor.py  test_ensemble_composing_model_integration.py  test_ensemble_report_manager.py  test_file_writer.py  test_html_report.py  test_http_headers.py  test_inference_load_search.py  test_logger.py  test_metrics_manager.py  test_model_config.py  test_model_config_generator.py  test_model_config_measurement.py  test_model_constraints.py  (+50 more)
tools/: COPYRIGHT  add_copyright.py
workflows/: codeql.yml
(+428 files in other folders)
